kubernetes/bazarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          ports:
            - containerPort: 6767
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config-pvc
        - name: media
          hostPath:
            path: /media/HDD
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr-service
  namespace: media
spec:
  selector:
    app: bazarr
  ports:
    - port: 6767
      targetPort: 6767
      nodePort: 30005
  type: NodePort
