kubernetes/jellyseer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:latest
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr-service
  namespace: media
spec:
  selector:
    app: jellyseerr
  ports:
    - name: http
      port: 5055
      targetPort: 5055
      nodePort: 30008
  type: NodePort
