kubernetes/qbittorrent-deployment.yaml
# qBittorrent
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8080
            - containerPort: 6881
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: downloads
          hostPath:
            path: /media/HDD/downloads
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
    - name: web
      port: 8080
      targetPort: 8080
      nodePort: 30004
    - name: torrent
      port: 6881
      targetPort: 6881
  type: NodePort
