kubernetes/radarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config-pvc
        - name: media
          hostPath:
            path: /media/HDD
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - port: 7878
      targetPort: 7878
      nodePort: 30002
  type: NodePort
