kubernetes/traefik-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /traefik
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
          - path: /traefik/api
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
          - path: /traefik/dashboard
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
